// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders favorite 1`] = `
<li
  key="foo"
>
  <ForwardRef(Link)
    data-key="foo"
    onClick={[MockFunction]}
    onFocus={[Function]}
    to={
      {
        "pathname": "/dashboard",
        "search": "?id=foo",
      }
    }
  >
    <div
      className="navbar-search-item-link little-padded-top"
      onMouseEnter={[Function]}
    >
      <div
        className="display-flex-center"
      >
        <span
          className="navbar-search-item-icons little-spacer-right"
        >
          <FavoriteIcon
            favorite={true}
            size={12}
          />
          <QualifierIcon
            className="little-spacer-right"
            qualifier="TRK"
          />
        </span>
        <span
          className="navbar-search-item-match"
        >
          foo
        </span>
      </div>
      <div
        className="navbar-search-item-right text-muted-2"
      >
        foo
      </div>
    </div>
  </ForwardRef(Link)>
</li>
`;

exports[`renders match 1`] = `
<li
  key="foo"
>
  <ForwardRef(Link)
    data-key="foo"
    onClick={[MockFunction]}
    onFocus={[Function]}
    to={
      {
        "pathname": "/dashboard",
        "search": "?id=foo",
      }
    }
  >
    <div
      className="navbar-search-item-link little-padded-top"
      onMouseEnter={[Function]}
    >
      <div
        className="display-flex-center"
      >
        <span
          className="navbar-search-item-icons little-spacer-right"
        >
          <QualifierIcon
            className="little-spacer-right"
            qualifier="TRK"
          />
        </span>
        <SafeHTMLInjection
          htmlAsString="f<mark>o</mark>o"
        >
          <span
            className="navbar-search-item-match"
          />
        </SafeHTMLInjection>
      </div>
      <div
        className="navbar-search-item-right text-muted-2"
      >
        foo
      </div>
    </div>
  </ForwardRef(Link)>
</li>
`;

exports[`renders recently browsed 1`] = `
<li
  key="foo"
>
  <ForwardRef(Link)
    data-key="foo"
    onClick={[MockFunction]}
    onFocus={[Function]}
    to={
      {
        "pathname": "/dashboard",
        "search": "?id=foo",
      }
    }
  >
    <div
      className="navbar-search-item-link little-padded-top"
      onMouseEnter={[Function]}
    >
      <div
        className="display-flex-center"
      >
        <span
          className="navbar-search-item-icons little-spacer-right"
        >
          <ClockIcon
            size={12}
          />
          <QualifierIcon
            className="little-spacer-right"
            qualifier="TRK"
          />
        </span>
        <span
          className="navbar-search-item-match"
        >
          foo
        </span>
      </div>
      <div
        className="navbar-search-item-right text-muted-2"
      >
        foo
      </div>
    </div>
  </ForwardRef(Link)>
</li>
`;

exports[`renders selected 1`] = `
<li
  key="foo"
>
  <ForwardRef(Link)
    data-key="foo"
    onClick={[MockFunction]}
    onFocus={[Function]}
    to={
      {
        "pathname": "/dashboard",
        "search": "?id=foo",
      }
    }
  >
    <div
      className="navbar-search-item-link little-padded-top"
      onMouseEnter={[Function]}
    >
      <div
        className="display-flex-center"
      >
        <span
          className="navbar-search-item-icons little-spacer-right"
        >
          <QualifierIcon
            className="little-spacer-right"
            qualifier="TRK"
          />
        </span>
        <span
          className="navbar-search-item-match"
        >
          foo
        </span>
      </div>
      <div
        className="navbar-search-item-right text-muted-2"
      >
        foo
      </div>
    </div>
  </ForwardRef(Link)>
</li>
`;

exports[`renders selected 2`] = `
<li
  key="foo"
>
  <ForwardRef(Link)
    className="hover"
    data-key="foo"
    onClick={[MockFunction]}
    onFocus={[Function]}
    to={
      {
        "pathname": "/dashboard",
        "search": "?id=foo",
      }
    }
  >
    <div
      className="navbar-search-item-link little-padded-top"
      onMouseEnter={[Function]}
    >
      <div
        className="display-flex-center"
      >
        <span
          className="navbar-search-item-icons little-spacer-right"
        >
          <QualifierIcon
            className="little-spacer-right"
            qualifier="TRK"
          />
        </span>
        <span
          className="navbar-search-item-match"
        >
          foo
        </span>
      </div>
      <div
        className="navbar-search-item-right text-muted-2"
      >
        foo
      </div>
    </div>
  </ForwardRef(Link)>
</li>
`;
